# hft-smart-contract-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
contracts/: strategy.wasm
include/: Contract.h  ContractLoader.h  MarketDataHandler.h
scripts/: build.sh
src/: ContractLoader.cpp  Engine.cpp  MarketDataHandler.cpp  main.cpp
